--- a/style.css
+++ b/style.css
@@ -1,3 +1,69 @@
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+#diaporama {
+	width: 90%;
+	height: 400px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#bloc_photos {
+	/*position: absolute;*/
+	display: inline-flex;
+	perspective: 400px;
+	z-index: 2;
+}
+
+#bloc_photos :first-child {
+	transform: rotateY(60deg);
+	opacity: 0.7;
+	margin-right: -150px;
+}
+
+#bloc_photos :nth-child(2) {
+	transform: rotateY(60deg);
+	opacity: 0.85;
+	margin-right: -50px;
+}
+
+#bloc_photos :nth-child(4) {
+	transform: rotateY(-60deg);
+	opacity: 0.85;
+	margin-left: -50px;
+}
+
+#bloc_photos :nth-child(5) {
+	transform: rotateY(-60deg);
+	opacity: 0.7;
+	margin-left: -150px;
+}
+
+.diaporama_elt {
+	max-width: 500px;
+	max-height: 300px;
+	/*margin-left: 10px;
+	margin-right: 10px;*/
+	border: 1px solid black;
+}
+
+.diaporama_elt img {
+	width: 100%;
+	border: 1px solid black;
+}
+
+.command {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
 #map {
 	width: 50%;
 	height: 600px;
@@ -5,8 +71,6 @@
 	margin-right: 40px;
 }
 
-.diaporama_elt {
-	width: 400px;
-	height: 400px;
+.border {
 	border: 1px solid black;
 }
