--- a/style.css
+++ b/style.css
@@ -3,6 +3,19 @@ a {
 	text-decoration: none;
 }
 
+#bandeau {
+	width: 90%;
+	padding-left: 5%;
+	padding-right: 5%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#logo {
+	width: 30%;
+}
+
 #diaporama {
 	width: 90%;
 	height: 400px;
@@ -19,6 +32,7 @@ a {
 	display: inline-flex;
 	align-items: center;
 	perspective: 600px;
+	transition: 2s;
 	z-index: 2;
 }
 
@@ -31,39 +45,47 @@ a {
 	width: 100%;
 }
 
-#bloc_photos :first-child {
+#bloc_photos div:first-child {
 	transform: rotateY(30deg);
-	opacity: 0.7;
+	opacity: 0.5;
 	margin-right: -150px;
+	margin-left: 10px;
+	/*transition: 2s;*/
 }
 
-#bloc_photos :nth-child(2) {
+#bloc_photos div:nth-child(2) {
 	transform: rotateY(30deg);
 	opacity: 0.7;
 	margin-right: -50px;
 	margin-left: -50px;
+	/*transition: 2s;*/
 }
 
-#bloc_photos :nth-child(3) {
+#bloc_photos div:nth-child(3) {
 	margin-left: -150px;
 	margin-right: -150px;
 	opacity: 1;
-	z-index: 10;
 	width: 150%;
+	/*transform: scale(1.5);*/
+	/*transition: 2s;*/
+	z-index: 10;
 }
 
-#bloc_photos :nth-child(4) {
+#bloc_photos div:nth-child(4) {
 	transform: rotateY(-30deg);
 	opacity: 0.7;
 	margin-left: -50px;
 	margin-right: -50px;
+	/*transition: 2s;*/
 }
 
-#bloc_photos :nth-child(5) {
+#bloc_photos div:nth-child(5) {
 	transform: rotateY(-30deg);
-	opacity: 0.7;
+	opacity: 0.5;
 	margin-left: -150px;
+	margin-right: 10px;
 	z-index: 2;
+	/*transition: 2s;*/
 }
 
 .cmd_left {
@@ -88,3 +110,71 @@ a {
 .border {
 	border: 1px solid black;
 }
+
+/*------ Test Perspective ---------*/
+
+
+/*#test_perspective {
+	width: 200px;
+	height: 200px;
+	margin: 30px;
+   perspective: 400px;
+	 -webkit-perspective: 400px;
+   perspective-origin: 50% 50%;
+   -webkit-perspective-origin: 50% 50%;
+   backface-visibility: visible;
+   -webkit-backface-visibility: visible;
+  border: 1px black solid;
+}
+
+.cube {
+   width: 100%;
+   height: 100%;
+}
+
+.face {
+   display: block;
+   position: absolute;
+   width: 100px;
+   height: 100px;
+   border: none;
+   line-height: 100px;
+   font-family: sans-serif;
+   font-size: 60px;
+   color: white;
+   text-align: center;
+}
+
+.front {
+   background: rgba(0, 0, 0, 0.3);
+   transform: translateZ(50px);
+   -webkit-transform: translateZ(50px);
+}
+.back {
+   background: rgba(0, 255, 0, 1);
+   color: black;
+   transform: rotateY(180deg) translateZ(50px);
+   -webkit-transform: rotateY(180deg) translateZ(50px);
+}
+.right {
+   background: rgba(196, 0, 0, 0.7);
+   transform: rotateY(90deg) translateZ(50px);
+   -webkit-transform: rotateY(90deg) translateZ(50px);
+}
+.left {
+   background: rgba(0, 0, 196, 0.7);
+   transform: rotateY(-90deg) translateZ(50px);
+   -webkit-transform: rotateY(-90deg) translateZ(50px);
+}
+.top {
+   background: rgba(196, 196, 0, 0.7);
+   transform: rotateX(90deg) translateZ(50px);
+   -webkit-transform: rotateX(90deg) translateZ(50px)
+}
+.bottom {
+   background: rgba(196, 0, 196, 0.7);
+   transform: rotateX(-90deg) translateZ(50px);
+   -webkit-transform: rotateX(-90deg) translateZ(50px);
+}*/
+
+
