--- a/style.css
+++ b/style.css
@@ -123,16 +123,21 @@ h4, legend, p {
 @media screen and (min-width: 1060px) {
 
 	#bloc_canvas {
-		width: 100%;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+	}
+
+	#bloc_canvas_reset {
 		display: flex;
 		justify-content: center;
+		flex-direction: column;
 		align-items: center;
 	}
 
 	#canvas {
-		width: 100%;
-		height: 150px;
-		margin-right: 2%;
+		/*width: 300px;
+		height: 150px;*/
 		border: 2px solid black;
 	}
 
@@ -148,15 +153,21 @@ h4, legend, p {
 @media screen and (min-width: 769px) and (max-width: 1059px)  {
 
 	#bloc_canvas {
-		width: 100%;
 		display: flex;
+		justify-content: center;
 		align-items: center;
 		flex-wrap: wrap;
 	}
 
+	#bloc_canvas_reset {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+	}
+
 	#canvas {
-		width: 100%;
-		height: 150px;
+	/*	width: 275px;
+		height: 150px;*/
 		border: 2px solid black;
 	}
 
@@ -185,7 +196,7 @@ h4, legend, p {
 		height: 600px;
 	}
 
-	#fieldset_container {
+	#container {
 		width: 45%;
 		min-height: 600px;
 		margin-left: 5%;
@@ -208,30 +219,6 @@ h4, legend, p {
 		border: 2px solid black;
 		padding: 10px;
 	}
-
-	#statut {
-		padding: 10px;
-		text-align: center;
-	}
-
-	.ouverte {
-		color: white;
-		background-color: limegreen;
-	}
-
-	.fermee {
-		background-color: #e21313;
-	}
-
-	.indefini {
-		color: white;
-		background-color: black;
-	}
-
-	#signature {
-		margin-top: 20px;
-		display: none;
-	}
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -247,7 +234,7 @@ h4, legend, p {
 		height: 300px;
 	}
 
-	#fieldset_container {
+	#container {
 		width: 100%;
 		margin-top: 20px;
 		margin-bottom: 20px;
@@ -271,41 +258,21 @@ h4, legend, p {
 		padding: 10px;
 	}
 
-	#statut {
-		padding: 10px;
-		text-align: center;
-	}
-
-	.ouverte {
-		color: white;
-		background-color: limegreen;
-	}
-
-	.fermee {
-		background-color: #e21313;
-	}
-
-	.indefini {
-		color: white;
-		background-color: black;
-	}
-
-	#signature {
-		margin-top: 20px;
-		display: none;
-	}
-
 	#bloc_canvas {
-		width: 100%;
 		display: flex;
-		justify-content: center;
+		justify-content: space-around;
+		align-items: center;
+	}
+
+	#bloc_canvas_reset {
+		display: flex;
+		flex-direction: column;
 		align-items: center;
 	}
 
 	#canvas {
-		width: 100%;
-		height: 150px;
-		margin-right: 2%;
+		/*width: 300px;
+		height: 150px;*/
 		border: 2px solid black;
 	}
 
@@ -331,7 +298,7 @@ h4, legend, p {
 		height: 300px;
 	}
 
-	#fieldset_container {
+	#container {
 		width: 100%;
 		margin-top: 20px;
 		margin-bottom: 20px;
@@ -355,40 +322,20 @@ h4, legend, p {
 		padding: 10px;
 	}
 
-	#statut {
-		padding: 10px;
-		text-align: center;
-	}
-
-	.ouverte {
-		color: white;
-		background-color: limegreen;
-	}
-
-	.fermee {
-		background-color: #e21313;
-	}
-
-	.indefini {
-		color: white;
-		background-color: black;
-	}
-
-	#signature {
-		margin-top: 20px;
-		display: none;
-	}
-
 	#bloc_canvas {
-		width: 100%;
 		display: flex;
-		flex-wrap: wrap;
+		flex-direction: column;
+	}
+
+	#bloc_canvas_reset {
+		display: flex;
+		flex-direction: column;
 		align-items: center;
 	}
 
 	#canvas {
-		width: 100%;
-		height: 150px;
+		/*width: 200px;
+		height: 150px;*/
 		border: 2px solid black;
 	}
 
@@ -401,6 +348,35 @@ h4, legend, p {
 		padding: 10px;
 		margin-top: 10px;
 	}
+}
+
+#statut {
+	padding: 10px;
+	text-align: center;
+}
+
+.ouverte {
+	color: white;
+	background-color: limegreen;
+}
+
+.fermee {
+	background-color: #e21313;
+}
+
+.indefini {
+	color: white;
+	background-color: black;
+}
+
+#signature {
+	margin-top: 20px;
+	display: none;
+}
+
+#reset {
+	color: black;
+	border: 1px solid limegreen;
 }
 
 .border {
