--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
+@font-face {
+	font-family: 'Action_Man';
+  src: url('fonts/actionman/Action_Man-webfont.eot');
+  src: url('fonts/actionman/Action_Man-webfont.eot?#iefix') format('embedded-opentype'),
+       url('fonts/actionman/Action_Man-webfont.woff') format('woff'),
+       url('fonts/actionman/Action_Man-webfont.ttf') format('truetype'),
+       url('fonts/actionman/Action_Man-webfont.svg') format('svg');
+}
+
 body {
-	background-color: #EFEFEF;
+	background-image: url('images/wallpaper_paris_comic.png');
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	background-attachment: fixed;
 	margin: 0px;
+}
+
+section {
 }
 
 a {
@@ -12,12 +27,32 @@ h4, legend, p {
 	font-family: 'PT Sans', sans-serif;
 }
 
+button:focus {
+	outline: none;
+}
+
 /*///////////////////////////////
 //////////// Header /////////////
 ///////////////////////////////*/
 
 header {
-	background-color: 
+	font-family: 'Action_Man';
+}
+
+#slogan1 {
+	color: #006699;
+}
+
+#slogan2 {
+	color: #ffff00;
+}
+
+#slogan3 {
+	color: #cc0066;
+}
+
+#slogan4 {
+	color: #33cc33;
 }
 
 @media screen and (min-width: 769px) {
@@ -26,9 +61,15 @@ header {
 		width: 90%;
 		padding-left: 5%;
 		padding-right: 5%;
+		padding-top: 10px;
+		padding-bottom: 50px;
 		display: flex;
 		justify-content: space-around;
 		align-items: center;
+		background-color: white;
+		background-image: url('images/bandeau_velib.png');
+		background-repeat: repeat-x;
+		background-position: left bottom;
 	}
 
 	#logo {
@@ -38,7 +79,6 @@ header {
 
 	#slogan {
 		width: 70%;
-		font-family: 'PT Sans', sans-serif;
 		font-size: 3.2vw;
 		text-align: -webkit-center;
 	}
@@ -53,9 +93,15 @@ header {
 		width: 90%;
 		padding-left: 5%;
 		padding-right: 5%;
+		padding-top: 10px;
+		padding-bottom: 45px;
 		display: flex;
 		justify-content: space-around;
 		align-items: center;
+		background-color: white;
+		background-image: url('images/bandeau_velib.png');
+		background-repeat: repeat-x;
+		background-position: 46% bottom;
 	}
 
 	#logo {
@@ -65,7 +111,6 @@ header {
 
 	#slogan {
 		width: 70%;
-		font-family: 'PT Sans', sans-serif;
 		font-size: 1.6em;
 		text-align: -webkit-center;
 	}
@@ -80,20 +125,24 @@ header {
 		width: 96%;
 		padding-left: 2%;
 		padding-right: 2%;
+		padding-bottom: 60px;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		background-color: white;
+		background-image: url('images/bandeau_velib.png');
+		background-repeat: repeat-x;
+		background-position: -60% bottom;
 	}
 
 	#logo {
 		width: 20%;
 		min-width: 150px;
-		margin-bottom: 20px;
+		margin-top: 20px;
 	}
 
 	#slogan {
-		font-family: 'PT Sans', sans-serif;
-		font-size: 1.2em;
+		font-size: 1.5em;
 		text-align: -webkit-center;
 	}
 
@@ -205,15 +254,17 @@ img {
 	}
 
 	#canvas {
-		border: 2px solid black;
+		border: none;
 		cursor: default;
+		background-color: gainsboro;
 	}
 
 	#bouton_valider {
 		font-family: 'PT Sans', sans-serif;
 		font-size: 1em;
 		font-weight: bold;
-		border: 2px solid black;
+		border: none;
+		background-color: gainsboro;
 		padding: 10px;
 	}
 }
@@ -229,13 +280,14 @@ img {
 
 	#bloc_canvas_reset {
 		display: flex;
-		justify-content: center;
+		align-items: center;
 		flex-direction: column;
 	}
 
 	#canvas {
-		border: 2px solid black;
+		border: none;
 		cursor: default;
+		background-color: gainsboro;
 	}
 
 	#bouton_valider {
@@ -243,7 +295,7 @@ img {
 		font-family: 'PT Sans', sans-serif;
 		font-size: 1em;
 		font-weight: bold;
-		border: 2px solid black;
+		border: none;
 		padding: 10px;
 		margin-top: 10px;
 	}
@@ -255,6 +307,7 @@ img {
 		width: 90%;
 		margin-left: auto;
 		margin-right: auto;
+		margin-bottom: 20px;
 		display: flex;
 	}
 
@@ -272,8 +325,9 @@ img {
 	#bloc_infos_station {
 		padding-left: 3%;
 		padding-right: 3%;
-		padding-bottom: 10px;
-		border: 2px solid black;
+		padding-top: 1px;
+		padding-bottom: 20px;
+		border: 1px solid gainsboro;
 		background-color: white;
 		display: none;
 	}
@@ -283,7 +337,8 @@ img {
 		font-family: 'PT Sans', sans-serif;
 		font-size: 1em;
 		font-weight: bold;
-		border: 2px solid black;
+		border: none;
+		background-color: gainsboro;
 		padding: 10px;
 	}
 }
@@ -294,6 +349,7 @@ img {
 		width: 90%;
 		margin-left: auto;
 		margin-right: auto;
+		margin-bottom: 20px;
 	}
 
 	#map {
@@ -311,7 +367,7 @@ img {
 		padding-left: 3%;
 		padding-right: 3%;
 		padding-bottom: 10px;
-		border: 2px solid black;
+		border: 1px solid gainsboro;
 		background-color: white;
 		display: none;
 	}
@@ -321,7 +377,7 @@ img {
 		font-family: 'PT Sans', sans-serif;
 		font-size: 1em;
 		font-weight: bold;
-		border: 2px solid black;
+		border: none;
 		padding: 10px;
 	}
 
@@ -338,15 +394,16 @@ img {
 	}
 
 	#canvas {
-		border: 2px solid black;
+		border: none;
 		cursor: default;
+		background-color: gainsboro;
 	}
 
 	#bouton_valider {
 		font-family: 'PT Sans', sans-serif;
 		font-size: 1em;
 		font-weight: bold;
-		border: 2px solid black;
+		border: none;
 		padding: 10px;
 	}
 }
@@ -357,6 +414,7 @@ img {
 		width: 90%;
 		margin-left: auto;
 		margin-right: auto;
+		margin-bottom: 20px;
 	}
 
 	#map {
@@ -374,7 +432,7 @@ img {
 		padding-left: 3%;
 		padding-right: 3%;
 		padding-bottom: 10px;
-		border: 2px solid black;
+		border: 1px solid gainsboro;
 		background-color: white;
 		display: none;
 	}
@@ -384,7 +442,7 @@ img {
 		font-family: 'PT Sans', sans-serif;
 		font-size: 1em;
 		font-weight: bold;
-		border: 2px solid black;
+		border: none;
 		padding: 10px;
 	}
 
@@ -400,8 +458,9 @@ img {
 	}
 
 	#canvas {
-		border: 2px solid black;
+		border: none;
 		cursor: default;
+		background-color: gainsboro;
 	}
 
 	#bouton_valider {
@@ -409,19 +468,16 @@ img {
 		font-family: 'PT Sans', sans-serif;
 		font-size: 1em;
 		font-weight: bold;
-		border: 2px solid black;
+		border: none;
 		padding: 10px;
 		margin-top: 10px;
 	}
 }
 
-#legend {
+#titre_infos_station {
 	font-family: 'PT Sans', sans-serif;
 	background-color: white;
-	width: 145px;
-	margin-top: -10px;
-	padding-left: 3px;
-	padding-right: 3px;
+	text-decoration: underline;
 }
 
 #statut {
@@ -445,12 +501,17 @@ img {
 
 input {
 	width: 89%;
-	border: 2px black solid;
+	border: none;
+	background-color: gainsboro;
 	margin-bottom: 10px;
 	padding-left: 5%;
 	padding-right: 5%;
 	padding-top: 5px;
 	padding-bottom: 5px;
+}
+
+#canvas:hover {
+	box-shadow: 0 0 10px #2b7fc1;
 }
 
 #signature {
@@ -464,7 +525,7 @@ input {
 
 #reset {
 	color: black;
-	border: 1px solid limegreen;
+	border: 1px solid whitesmoke;
 }
 
 #erreur {
@@ -487,9 +548,10 @@ input {
 	margin-left: 5%;
 	margin-right: 5%;
 	margin-top: 20px;
+	margin-bottom: 20px;
 	padding-left: 20px;
 	padding-right: 20px;
-	border: 2px solid black;
+	border: 1px solid gainsboro;
 	background-color: white;
 	font-family: 'PT Sans', sans-serif;
 	display: none;
