--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ button:focus {
 	outline: none;
 }
 
+.ui-loader {
+	display: none;
+}
+
 /*///////////////////////////////
 //////////// Header /////////////
 ///////////////////////////////*/
